--- a/index.html
+++ b/index.html
@@ -9,8 +9,11 @@
 	<header>
 
 		<div class="row">
+				<div class="logo">
+					<img src="Logo.png">
+				</div>
 			<ul class="main-nav">
-				<li><a href=""> HOME </a></li>
+				<li class="active"><a href=""> HOME </a></li>
 				<li><a href=""> SERVICES </a></li>
 				<li><a href=""> ABOUT </a></li>
 				<li><a href=""> CONTACT </a></li>
