Change in color of the navigation bar, but that may change due to the colors being slightly too similar.

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Practice Page</title>
+	<title>LABron</title>
 	<link href="style.css" rel="stylesheet" type="text/css">
 	<!-- The above is what will link our HTML file to our CSS file -->
 </head>
