Changes is overall design, trying to get the layout of the website in a vertically oriented fashion.

--- a/index.html
+++ b/index.html
@@ -8,22 +8,18 @@
 <body>
 	<header>
 
-		<div class="row">
+		<div class="block-1">
 				<div class="logo">
 					<img src="Logo.png">
 				</div>
-			<ul class="main-nav">
-				<li class="active"><a href=""> HOME </a></li>
-				<li><a href=""> SERVICES </a></li>
-				<li><a href=""> ABOUT </a></li>
-				<li><a href=""> CONTACT </a></li>
-				<li><a href=""> NEWS </a></li>
-				<li><a href=""> FAQ </a></li>
-			</ul>
 		</div>
 
-		<div class="king">
+		<div class="block-2">
 			<h1>King James</h1>
+		</div>
+
+		<div class="block-3">
+			<img src="lebron-james.png" class="lbjphoto" alt="LeBron James in a Los Angeles Lakers jersey">
 		</div>
 
 </html>
