--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 		<div class="block-2">
 			<h1>King James</h1>
 		</div>
+	</header>
 
 		<div class="block-3">
 			<img src="lebron-james.png" class="lbjphoto" alt="LeBron James in a Los Angeles Lakers jersey">
