Change to the design. Original plan was flawed, may consider returning back to that idea in the future.

--- a/index.html
+++ b/index.html
@@ -1,26 +1,18 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>LeBron James</title>
-	<link href="style.css" rel="stylesheet" type="text/css">
-	<!-- The above is what will link our HTML file to our CSS file -->
+	<title>Lebron James</title>
+	<link href="https://fonts.googleapis.com/css?family=Permanent+Marker" rel="stylesheet">
+	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-	<header>
 
-		<div class="block-1">
-				<div class="logo">
-					<img src="Logo.png">
-				</div>
-		</div>
+<h1>LeBron James</h1>
 
-		<div class="block-2">
-			<h1>King James</h1>
-		</div>
-	</header>
+<div class="image">
+	<img id="photo" src="lebron-james.png">
+</div>
 
-		<div class="block-3">
-			<img src="lebron-james.png" class="lbjphoto" alt="LeBron James in a Los Angeles Lakers jersey">
-		</div>
 
+</body>
 </html>
