Addition of all of the comments into the main page. No formatting has been added to the list of accomplishments.

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>Lebron James</title>
-	<link href="https://fonts.googleapis.com/css?family=Permanent+Marker" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Mukta:300,400|Permanent+Marker" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
@@ -10,9 +10,48 @@
 <h1>LeBron James</h1>
 
 <div class="image">
-	<img id="photo" src="lebron-james.png">
+	<img id="photo" src="lebron-james.png" alt="LeBron James wearing the Lakers jersey that he will wear for the next season.">
 </div>
 
+<div class="accomplishments">
+	<h2>Here are all of his accomplishments thus far:</h2>	
+
+	<h3>NBA:</h3>
+		<ul>
+			
+			<li>3× NBA champion (2012, 2013, 2016)</li>
+			<li>3× NBA Finals MVP (2012, 2013, 2016)</li>
+			<li>4× NBA Most Valuable Player (2009, 2010, 2012, 2013)</li>
+			<li>14× NBA All-Star (2005–2018)</li>
+			<li>14× NBA All-Star (2005–2018)</li>
+			<li>3× NBA All-Star Game MVP (2006, 2008, 2018)</li>
+			<li>12× All-NBA First Team (2006, 2008–2018)</li>
+			<li>2× All-NBA Second Team (2005, 2007)</li>
+			<li>5× NBA All-Defensive First Team (2009–2013)</li>
+			<li>NBA All-Defensive Second Team (2014)</li>
+			<li>NBA Rookie of the Year (2004)</li>
+			<li>NBA scoring champion (2008)</li>
+			<li></li>
+
+		</ul>
+
+
+
+J. Walter Kennedy Citizenship Award (2017)
+2× AP Athlete of the Year (2013, 2016)
+2× Sports Illustrated Sportsperson of the Year (2012, 2016)
+USA Basketball Male Athlete of the Year (2012)
+2× Mr. Basketball USA (2002, 2003)
+Naismith Prep Player of the Year (2003)
+McDonald's All-American Game MVP (2003)
+3× Ohio Mr. Basketball (2001–2003)
+	<h3>United States National Team:</h3>
+
+	<h3>High School:</h3>
+
+	<h3>Other:</h3>
+
+</div>
 
 </body>
 </html>
