More changes to the design of the page itself.

--- a/index.html
+++ b/index.html
@@ -2,56 +2,49 @@
 <html>
 <head>
 	<title>Lebron James</title>
-	<link href="https://fonts.googleapis.com/css?family=Mukta:300,400|Permanent+Marker" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Mukta:300,400,600|Permanent+Marker" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
-<body>
+<body id="main">
 
-<h1>LeBron James</h1>
+<h1 id="title">LeBron James</h1>
 
-<div class="image">
-	<img id="photo" src="lebron-james.png" alt="LeBron James wearing the Lakers jersey that he will wear for the next season.">
+<div class="image-div">
+	<img id="image" src="lebron-james.png" alt="LeBron James wearing the Lakers jersey that he will wear for the next season.">
+	<figcaption id="image-caption">LeBron James wearing the Lakers jersey that he will wear for the next season.
+	</figcaption>
 </div>
 
-<div class="accomplishments">
-	<h2>Here are all of his accomplishments thus far:</h2>	
+<div class="tribute-info">
+	<h2>Here are all of his accomplishments in the NBA:</h2>	
 
-	<h3>NBA:</h3>
 		<ul>
-			
-			<li>3× NBA champion (2012, 2013, 2016)</li>
-			<li>3× NBA Finals MVP (2012, 2013, 2016)</li>
-			<li>4× NBA Most Valuable Player (2009, 2010, 2012, 2013)</li>
-			<li>14× NBA All-Star (2005–2018)</li>
-			<li>14× NBA All-Star (2005–2018)</li>
-			<li>3× NBA All-Star Game MVP (2006, 2008, 2018)</li>
-			<li>12× All-NBA First Team (2006, 2008–2018)</li>
-			<li>2× All-NBA Second Team (2005, 2007)</li>
-			<li>5× NBA All-Defensive First Team (2009–2013)</li>
-			<li>NBA All-Defensive Second Team (2014)</li>
-			<li>NBA Rookie of the Year (2004)</li>
-			<li>NBA scoring champion (2008)</li>
-			<li></li>
+
+			<li>3× NBA champion (<strong>2012</strong>, <strong>2013</strong>, <strong>2016</strong>)</li>
+			<li>3× NBA Finals MVP (<strong>2012</strong>, <strong>2013</strong>, <strong>2016</strong>)</li>
+			<li>4× NBA Most Valuable Player (<strong>2009</strong>, <strong>2010</strong>, <strong>2012</strong>, <strong>2013</strong>)</li>
+			<li>14× NBA All-Star (<strong>2005–2018</strong>)</li>
+			<li>14× NBA All-Star (<strong>2005–2018</strong>)</li>
+			<li>3× NBA All-Star Game MVP (<strong>2006</strong>, <strong>2008</strong>, <strong>2018</strong>)</li>
+			<li>12× All-NBA First Team (<strong>2006</strong>, <strong>2008–2018</strong>)</li>
+			<li>2× All-NBA Second Team (<strong>2005</strong>, <strong>2007</strong>)</li>
+			<li>5× NBA All-Defensive First Team (<strong>2009–2013</strong>)</li>
+			<li>NBA All-Defensive Second Team (<strong>2014</strong>)</li>
+			<li>NBA Rookie of the Year (<strong>2004</strong>)</li>
+			<li>NBA scoring champion (<strong>2008</strong>)</li>
 
 		</ul>
 
+	<div id="quote">
+		<p>
+			<i>"I don't know how tall I am or how much I weigh. Because I don't want anybody to know my identity. I'm like a superhero. Call me Basketball Man."</i>
+		</p> 
 
-
-J. Walter Kennedy Citizenship Award (2017)
-2× AP Athlete of the Year (2013, 2016)
-2× Sports Illustrated Sportsperson of the Year (2012, 2016)
-USA Basketball Male Athlete of the Year (2012)
-2× Mr. Basketball USA (2002, 2003)
-Naismith Prep Player of the Year (2003)
-McDonald's All-American Game MVP (2003)
-3× Ohio Mr. Basketball (2001–2003)
-	<h3>United States National Team:</h3>
-
-	<h3>High School:</h3>
-
-	<h3>Other:</h3>
+		<p>-LeBron James</p>
+	</div>
 
 </div>
+
 
 </body>
 </html>
