Changes to various different element IDs.

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 
 <h1 id="title">LeBron James</h1>
 
-<div class="image-div">
-	<img id="image" src="lebron-james.png" alt="LeBron James wearing the Lakers jersey that he will wear for the next season.">
-	<figcaption id="image-caption">LeBron James wearing the Lakers jersey that he will wear for the next season.
+<div id="img-div">
+	<img id="image" src="https://www.dropbox.com/s/4f49fc9ilvw7ren/lebron-james.png?raw=1" alt="LeBron James wearing the Lakers jersey that he will wear for the next season.">
+	<figcaption id="img-caption">LeBron James wearing the Lakers jersey that he will wear for the next season.
 	</figcaption>
 </div>
 
@@ -42,6 +42,8 @@
 
 		<p>-LeBron James</p>
 	</div>
+
+	<p id="tribute-info">For a more complete list of all of the accomplishments that LeBron James has, please view his <a id="tribute-link" href="https://en.wikipedia.org/wiki/LeBron_James" target="_blank">Wikipedia</a> page.</p>
 
 </div>
 
